[project]
name = "downloadserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.24.0",
    "pydantic==2.10.4",
    "pyhumps==3.8.0",
    "tenacity==8.2.2",
    "tornado==6.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
